tests/parser_cases/valid/arith_and_call.ob0
MODULE Main;
BEGIN
  x := 1 + 2 * 3;
  WriteInt(x);
END Main.
