tests/parser_cases/invalid/bad_string_literal_multiline.ob0
(* INVALID: string literal spans multiple lines *)
MODULE Main;
BEGIN
  WriteString("Hello,
Oberon")
END Main.
